--- a/reports/pit/com.l13gr03.pets.utils.calculator/CalculatorTest.java.html
+++ b/reports/pit/com.l13gr03.pets.utils.calculator/CalculatorTest.java.html
@@ -16,43 +16,43 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@fcecc45_20'>20</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@b1e63b5_20'>20</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@fcecc45_20'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@b1e63b5_20'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testPhysicalDamageCalculator<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testPhysicalDamageCalculator<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@fcecc45_33'>33</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@b1e63b5_33'>33</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@fcecc45_33'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@b1e63b5_33'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testSpecialDamageCalculator<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testSpecialDamageCalculator<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@fcecc45_46'>46</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@b1e63b5_46'>46</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@fcecc45_46'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@b1e63b5_46'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testSpecialDamageCalculatorIfAttackTypeIsDifferent<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testSpecialDamageCalculatorIfAttackTypeIsDifferent<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@fcecc45_58'>58</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@b1e63b5_58'>58</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@fcecc45_58'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@b1e63b5_58'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testAdvantageCalculator<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testAdvantageCalculator<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertEquals &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -77,6 +77,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testPhysicalDamageCalculator()] (0 ms)</li><li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculatorIfAttackTypeIsDifferent()] (0 ms)</li><li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testAdvantageCalculator()] (0 ms)</li><li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testSpecialDamageCalculator()] (0 ms)</li>
 </ul>
 
 <br/>
