--- a/reports/pit/com.l13gr03.pets.utils.random/StatusRandomizerTest.java.html
+++ b/reports/pit/com.l13gr03.pets.utils.random/StatusRandomizerTest.java.html
@@ -16,63 +16,63 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@29a73056_13'>13</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@51158fb1_13'>13</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@29a73056_13'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@51158fb1_13'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertTrue &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertTrue &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@29a73056_14'>14</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@51158fb1_14'>14</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@29a73056_14'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@51158fb1_14'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@29a73056_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@51158fb1_22'>22</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@29a73056_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@51158fb1_22'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertTrue &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertTrue &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@29a73056_23'>23</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@51158fb1_23'>23</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@29a73056_23'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@51158fb1_23'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@29a73056_28'>28</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@51158fb1_28'>28</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@29a73056_28'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@51158fb1_28'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>generate3Test<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNull &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>generate3Test<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNull &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@29a73056_33'>33</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@51158fb1_33'>33</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@29a73056_33'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@51158fb1_33'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decideTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decideTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -97,6 +97,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.utils.random.StatusRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.StatusRandomizerTest]/[method:oneInFiftyTest()] (0 ms)</li><li>com.l13gr03.pets.utils.random.StatusRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.StatusRandomizerTest]/[method:generate3Test()] (1 ms)</li><li>com.l13gr03.pets.utils.random.StatusRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.StatusRandomizerTest]/[method:decideTest()] (1 ms)</li><li>com.l13gr03.pets.utils.random.StatusRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.StatusRandomizerTest]/[method:oneInTenTest()] (0 ms)</li>
 </ul>
 
 <br/>
