--- a/reports/pit/com.l13gr03.pets.utils.random/TurnRandomizerTest.java.html
+++ b/reports/pit/com.l13gr03.pets.utils.random/TurnRandomizerTest.java.html
@@ -16,63 +16,63 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5c65d5c3_11'>11</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@ee7a538_11'>11</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5c65d5c3_11'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@ee7a538_11'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>generate3Test<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNull &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>generate3Test<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNull &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5c65d5c3_19'>19</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@ee7a538_19'>19</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5c65d5c3_19'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@ee7a538_19'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5c65d5c3_20'>20</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@ee7a538_20'>20</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5c65d5c3_20'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@ee7a538_20'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5c65d5c3_28'>28</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@ee7a538_28'>28</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5c65d5c3_28'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@ee7a538_28'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5c65d5c3_29'>29</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@ee7a538_29'>29</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5c65d5c3_29'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@ee7a538_29'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5c65d5c3_34'>34</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@ee7a538_34'>34</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5c65d5c3_34'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@ee7a538_34'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decideTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNotNull &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decideTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNotNull &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -97,6 +97,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:oneInTenTest()] (1 ms)</li><li>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:decideTest()] (0 ms)</li><li>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:generate3Test()] (1 ms)</li><li>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:oneInFiftyTest()] (1 ms)</li>
 </ul>
 
 <br/>
