--- a/reports/pit/com.l13gr03.pets.view/BattleMulViewerTest.java.html
+++ b/reports/pit/com.l13gr03.pets.view/BattleMulViewerTest.java.html
@@ -16,23 +16,23 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4d76f990_31'>31</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@301c622d_31'>31</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4d76f990_31'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@301c622d_31'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/view/BattleMulViewer::drawElements &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>com.l13gr03.pets.view.BattleMulViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.BattleMulViewerTest]/[method:testDrawElements()]</span></span> removed call to com/l13gr03/pets/view/BattleMulViewer::drawElements &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4d76f990_34'>34</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@301c622d_34'>34</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4d76f990_34'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@301c622d_34'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -57,6 +57,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.view.BattleMulViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.BattleMulViewerTest]/[method:testDrawElements()] (613 ms)</li>
 </ul>
 
 <br/>
