--- a/reports/pit/com.l13gr03.pets.view/GameOverViewTest.java.html
+++ b/reports/pit/com.l13gr03.pets.view/GameOverViewTest.java.html
@@ -16,43 +16,43 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6f64c40c_35'>35</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1488d1c_35'>35</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6f64c40c_35'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1488d1c_35'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/view/GameOverViewer::drawElements &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>com.l13gr03.pets.view.GameOverViewTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.GameOverViewTest]/[method:testDrawElements()]</span></span> removed call to com/l13gr03/pets/view/GameOverViewer::drawElements &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6f64c40c_38'>38</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1488d1c_38'>38</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6f64c40c_38'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1488d1c_38'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>com.l13gr03.pets.view.GameOverViewTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.GameOverViewTest]/[method:testDrawElements()]</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6f64c40c_43'>43</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1488d1c_43'>43</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6f64c40c_43'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1488d1c_43'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>com.l13gr03.pets.view.GameOverViewTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.GameOverViewTest]/[method:testDrawElements()]</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6f64c40c_48'>48</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1488d1c_48'>48</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6f64c40c_48'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1488d1c_48'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -77,6 +77,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.view.GameOverViewTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.GameOverViewTest]/[method:testDrawElements()] (114 ms)</li>
 </ul>
 
 <br/>
