--- a/reports/pit/com.l13gr03.pets.view/SettingsViewerTest.java.html
+++ b/reports/pit/com.l13gr03.pets.view/SettingsViewerTest.java.html
@@ -16,73 +16,73 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6d26b068_30'>30</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@65fa1cd_30'>30</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6d26b068_30'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@65fa1cd_30'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/view/SettingsViewer::draw &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>com.l13gr03.pets.view.SettingsViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.SettingsViewerTest]/[method:testDrawElements()]</span></span> removed call to com/l13gr03/pets/view/SettingsViewer::draw &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6d26b068_31'>31</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@65fa1cd_31'>31</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6d26b068_31'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@65fa1cd_31'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer division with multiplication &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer division with multiplication &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6d26b068_32'>32</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@65fa1cd_32'>32</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6d26b068_32'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@65fa1cd_32'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer division with multiplication &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer division with multiplication &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6d26b068_33'>33</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@65fa1cd_33'>33</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6d26b068_33'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@65fa1cd_33'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> changed conditional boundary &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> changed conditional boundary &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6d26b068_34'>34</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@65fa1cd_34'>34</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6d26b068_34'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@65fa1cd_34'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>com.l13gr03.pets.view.SettingsViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.SettingsViewerTest]/[method:testDrawElements()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6d26b068_36'>36</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@65fa1cd_36'>36</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6d26b068_36'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@65fa1cd_36'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer subtraction with addition &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer subtraction with addition &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer division with multiplication &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>4.<span><b>4</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer addition with subtraction &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer subtraction with addition &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer subtraction with addition &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer division with multiplication &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>4.<span><b>4</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> Replaced integer addition with subtraction &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6d26b068_39'>39</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@65fa1cd_39'>39</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6d26b068_39'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@65fa1cd_39'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>testDrawElements<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::drawText &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -107,6 +107,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.view.SettingsViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.SettingsViewerTest]/[method:testDrawElements()] (4 ms)</li>
 </ul>
 
 <br/>
