--- a/reports/pit/com.l13gr03.pets.model.game.battle.bots/EasyCPU.java.html
+++ b/reports/pit/com.l13gr03.pets.model.game.battle.bots/EasyCPU.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_4'></a>
 <span>
 </span>
 </span>
@@ -75,12 +75,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_5'></a>
 <span>
 </span>
 </span>
@@ -90,12 +90,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_6'></a>
 <span>
 </span>
 </span>
@@ -105,12 +105,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_7'></a>
 <span>
 </span>
 </span>
@@ -119,43 +119,43 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_8'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_8'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        super(&#34;Easy Bot&#34;);</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        super(&#34;Easy Bot&#34;);</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_9'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_9'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_10'></a>
 <span>
 </span>
 </span>
@@ -165,12 +165,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_11'></a>
 <span>
 </span>
 </span>
@@ -179,30 +179,30 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_12'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_12'/>
 12
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_12'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_12'>1</a>
 <span>
-1. chooseAttack : replaced int return with 0 for com/l13gr03/pets/model/game/battle/bots/EasyCPU::chooseAttack &rarr; NO_COVERAGE<br/>
+1. chooseAttack : replaced int return with 0 for com/l13gr03/pets/model/game/battle/bots/EasyCPU::chooseAttack &rarr; SURVIVED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        return random.nextInt(4);</span></pre></td></tr>
+<td class='covered'><pre><span  class='survived'>        return random.nextInt(4);</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_13'></a>
 <span>
 </span>
 </span>
@@ -212,12 +212,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6e5506c9_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@642b2176_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_14'></a>
 <span>
 </span>
 </span>
@@ -229,13 +229,13 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6e5506c9_12'>12</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@642b2176_12'>12</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6e5506c9_12'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@642b2176_12'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>chooseAttack<br/><b>Killed by : </b>none</span></span> replaced int return with 0 for com/l13gr03/pets/model/game/battle/bots/EasyCPU::chooseAttack &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>chooseAttack<br/><b>Killed by : </b>none</span></span> replaced int return with 0 for com/l13gr03/pets/model/game/battle/bots/EasyCPU::chooseAttack &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -260,6 +260,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testEasyCPU()] (2 ms)</li>
 </ul>
 
 <br/>
