--- a/reports/pit/com.l13gr03.pets.model.game.battle/Party.java.html
+++ b/reports/pit/com.l13gr03.pets.model.game.battle/Party.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_4'></a>
 <span>
 </span>
 </span>
@@ -75,12 +75,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_5'></a>
 <span>
 </span>
 </span>
@@ -90,12 +90,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_6'></a>
 <span>
 </span>
 </span>
@@ -105,12 +105,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_7'></a>
 <span>
 </span>
 </span>
@@ -119,88 +119,88 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_8'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_8'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    public Party(Entity a, Entity b, Entity c) {</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    public Party(Entity a, Entity b, Entity c) {</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_9'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_9'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        p1 = a;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        p1 = a;</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_10'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_10'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        p2 = b;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        p2 = b;</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_11'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_11'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        p3 = c;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        p3 = c;</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_12'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_12'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_13'></a>
 <span>
 </span>
 </span>
@@ -209,75 +209,75 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_14'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_14'/>
 14
 </td>
-<td class='survived'>
+<td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_14'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_14'>1</a>
 <span>
-1. getP : replaced return value with null for com/l13gr03/pets/model/game/battle/Party::getP &rarr; NO_COVERAGE<br/>
+1. getP : replaced return value with null for com/l13gr03/pets/model/game/battle/Party::getP &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        return switch (n) {</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>        return switch (n) {</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_15'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_15'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>            case 1 -&#62; p1;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>            case 1 -&#62; p1;</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_16'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_16'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>            case 2 -&#62; p2;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>            case 2 -&#62; p2;</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_17'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_17'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>            case 3 -&#62; p3;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>            case 3 -&#62; p3;</span></pre></td></tr>
 
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_18'></a>
 <span>
 </span>
 </span>
@@ -287,12 +287,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_19'></a>
 <span>
 </span>
 </span>
@@ -302,12 +302,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_20'></a>
 <span>
 </span>
 </span>
@@ -317,12 +317,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@47970962_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@757ad227_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@47970962_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_21'></a>
 <span>
 </span>
 </span>
@@ -334,13 +334,13 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@47970962_14'>14</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@757ad227_14'>14</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@47970962_14'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@757ad227_14'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getP<br/><b>Killed by : </b>none</span></span> replaced return value with null for com/l13gr03/pets/model/game/battle/Party::getP &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getP<br/><b>Killed by : </b>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()]</span></span> replaced return value with null for com/l13gr03/pets/model/game/battle/Party::getP &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -365,6 +365,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.view.BattleViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.BattleViewerTest]/[method:testDrawElements()] (5 ms)</li><li>com.l13gr03.pets.view.BattleMulViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.BattleMulViewerTest]/[method:testDrawElements()] (613 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (3 ms)</li>
 </ul>
 
 <br/>
