--- a/reports/pit/com.l13gr03.pets.model.game.entities.species/None.java.html
+++ b/reports/pit/com.l13gr03.pets.model.game.entities.species/None.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_4'></a>
 <span>
 </span>
 </span>
@@ -75,12 +75,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_5'></a>
 <span>
 </span>
 </span>
@@ -90,12 +90,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_6'></a>
 <span>
 </span>
 </span>
@@ -105,12 +105,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_7'></a>
 <span>
 </span>
 </span>
@@ -120,12 +120,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_8'></a>
 <span>
 </span>
 </span>
@@ -135,12 +135,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_9'></a>
 <span>
 </span>
 </span>
@@ -150,12 +150,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_10'></a>
 <span>
 </span>
 </span>
@@ -165,12 +165,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_11'></a>
 <span>
 </span>
 </span>
@@ -180,12 +180,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_12'/>
 12
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_12'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_12'>1</a>
 <span>
 1. &#60;init&#62; : removed call to com/l13gr03/pets/model/game/entities/Entity::setStats &rarr; SURVIVED<br/>
 
@@ -197,12 +197,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_13'></a>
 <span>
 </span>
 </span>
@@ -212,12 +212,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_14'></a>
 <span>
 </span>
 </span>
@@ -227,12 +227,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_15'></a>
 <span>
 </span>
 </span>
@@ -242,12 +242,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_16'></a>
 <span>
 </span>
 </span>
@@ -257,12 +257,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_17'></a>
 <span>
 </span>
 </span>
@@ -272,12 +272,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_18'></a>
 <span>
 </span>
 </span>
@@ -287,12 +287,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_19'></a>
 <span>
 </span>
 </span>
@@ -302,12 +302,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_20'></a>
 <span>
 </span>
 </span>
@@ -317,12 +317,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_21'></a>
 <span>
 </span>
 </span>
@@ -332,12 +332,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_22'/>
 22
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_22'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_22'>1</a>
 <span>
 1. useAbility : removed call to com/l13gr03/pets/model/game/entities/species/None::turnAbilityOn &rarr; KILLED<br/>
 
@@ -349,12 +349,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_23'/>
 23
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_23'></a>
 <span>
 </span>
 </span>
@@ -364,12 +364,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@1c461b90_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_24'></a>
 <span>
 </span>
 </span>
@@ -381,21 +381,21 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1c461b90_12'>12</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_12'>12</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_12'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_12'/> 
 
 <p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>&#60;init&#62;<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/model/game/entities/Entity::setStats &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1c461b90_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1a13b5c1_22'>22</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1c461b90_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1a13b5c1_22'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>useAbility<br/><b>Killed by : </b>com.l13gr03.pets.model.game.entities.EntityTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.game.entities.EntityTest]/[method:testNone()]</span></span> removed call to com/l13gr03/pets/model/game/entities/species/None::turnAbilityOn &rarr; KILLED</p> 
 </td>
@@ -422,7 +422,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>com.l13gr03.pets.model.game.entities.EntityTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.game.entities.EntityTest]/[method:testNone()] (1 ms)</li>
+<li>com.l13gr03.pets.model.game.entities.EntityTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.game.entities.EntityTest]/[method:testNone()] (2 ms)</li>
 </ul>
 
 <br/>
