--- a/reports/pit/com.l13gr03.pets.model.menu/GameOver.java.html
+++ b/reports/pit/com.l13gr03.pets.model.menu/GameOver.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_4'></a>
 <span>
 </span>
 </span>
@@ -75,12 +75,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_5'></a>
 <span>
 </span>
 </span>
@@ -90,12 +90,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_6'></a>
 <span>
 </span>
 </span>
@@ -105,12 +105,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_7'></a>
 <span>
 </span>
 </span>
@@ -119,90 +119,90 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_8'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_8'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    public GameOver(int i){</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    public GameOver(int i){</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_9'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_9'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        String sex= &#34;Player &#34; + Integer.toString(i)+ &#34; won the game&#34;;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        String sex= &#34;Player &#34; + Integer.toString(i)+ &#34; won the game&#34;;</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_10'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_10'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        text= Arrays.asList(&#34;GAME OVER&#34;, sex,&#34;&#60;Press ENTER to go back to the menu&#62;&#34;);</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        text= Arrays.asList(&#34;GAME OVER&#34;, sex,&#34;&#60;Press ENTER to go back to the menu&#62;&#34;);</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_11'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_11'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_12'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_12'/>
 12
 </td>
-<td class='survived'>
+<td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_12'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_12'>1</a>
 <span>
-1. getText : replaced return value with Collections.emptyList for com/l13gr03/pets/model/menu/GameOver::getText &rarr; NO_COVERAGE<br/>
+1. getText : replaced return value with Collections.emptyList for com/l13gr03/pets/model/menu/GameOver::getText &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>    public List&#60;String&#62; getText(){return text;}</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>    public List&#60;String&#62; getText(){return text;}</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_13'></a>
 <span>
 </span>
 </span>
@@ -212,12 +212,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12e33c7b_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@71eead09_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_14'></a>
 <span>
 </span>
 </span>
@@ -229,13 +229,13 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@12e33c7b_12'>12</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@71eead09_12'>12</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@12e33c7b_12'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@71eead09_12'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getText<br/><b>Killed by : </b>none</span></span> replaced return value with Collections.emptyList for com/l13gr03/pets/model/menu/GameOver::getText &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getText<br/><b>Killed by : </b>com.l13gr03.pets.view.GameOverViewTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.GameOverViewTest]/[method:testDrawElements()]</span></span> replaced return value with Collections.emptyList for com/l13gr03/pets/model/menu/GameOver::getText &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -260,6 +260,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.view.GameOverViewTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.GameOverViewTest]/[method:testDrawElements()] (114 ms)</li>
 </ul>
 
 <br/>
