--- a/reports/pit/com.l13gr03.pets.utils.calculator/PhysicalDamageCalculator.java.html
+++ b/reports/pit/com.l13gr03.pets.utils.calculator/PhysicalDamageCalculator.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_4'></a>
 <span>
 </span>
 </span>
@@ -74,28 +74,28 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_5'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_5'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>public class PhysicalDamageCalculator implements Calculator{</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>public class PhysicalDamageCalculator implements Calculator{</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_6'></a>
 <span>
 </span>
 </span>
@@ -104,95 +104,95 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_7'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_7'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        int moveDamage = attackerAttack.getDamage();</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        int moveDamage = attackerAttack.getDamage();</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_8'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_8'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        int power = attacker.getAtk();</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        int power = attacker.getAtk();</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_9'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_9'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        int def = defender.getDef();</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        int def = defender.getDef();</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_10'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_10'/>
 10
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_10'>2</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_10'>2</a>
 <span>
-1. execute : negated conditional &rarr; NO_COVERAGE<br/>
-2. execute : negated conditional &rarr; NO_COVERAGE<br/>
+1. execute : negated conditional &rarr; SURVIVED<br/>
+2. execute : negated conditional &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        if(attackerAttack.getElementId() == attacker.getId() || attackerAttack.getElementId() == 7){</span></pre></td></tr>
+<td class='covered'><pre><span  class='survived'>        if(attackerAttack.getElementId() == attacker.getId() || attackerAttack.getElementId() == 7){</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_11'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_11'/>
 11
 </td>
-<td class='survived'>
+<td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_11'>3</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_11'>3</a>
 <span>
-1. execute : replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; NO_COVERAGE<br/>
-2. execute : Replaced double division with multiplication &rarr; NO_COVERAGE<br/>
-3. execute : Replaced double multiplication with division &rarr; NO_COVERAGE<br/>
+1. execute : replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; KILLED<br/>
+2. execute : Replaced double division with multiplication &rarr; KILLED<br/>
+3. execute : Replaced double multiplication with division &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>            return (double) power /def * moveDamage;</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>            return (double) power /def * moveDamage;</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_12'></a>
 <span>
 </span>
 </span>
@@ -202,12 +202,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_13'></a>
 <span>
 </span>
 </span>
@@ -216,33 +216,33 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_14'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_14'/>
 14
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_14'>4</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_14'>4</a>
 <span>
-1. execute : Replaced double division with multiplication &rarr; NO_COVERAGE<br/>
-2. execute : replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; NO_COVERAGE<br/>
-3. execute : Replaced double multiplication with division &rarr; NO_COVERAGE<br/>
-4. execute : Replaced double multiplication with division &rarr; NO_COVERAGE<br/>
+1. execute : Replaced double division with multiplication &rarr; SURVIVED<br/>
+2. execute : replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; SURVIVED<br/>
+3. execute : Replaced double multiplication with division &rarr; SURVIVED<br/>
+4. execute : Replaced double multiplication with division &rarr; SURVIVED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>            return (double) power /def * moveDamage * 0.75;</span></pre></td></tr>
+<td class='covered'><pre><span  class='survived'>            return (double) power /def * moveDamage * 0.75;</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_15'></a>
 <span>
 </span>
 </span>
@@ -252,12 +252,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_16'></a>
 <span>
 </span>
 </span>
@@ -267,12 +267,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_17'></a>
 <span>
 </span>
 </span>
@@ -282,12 +282,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5166f042_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a1c4f69_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_18'></a>
 <span>
 </span>
 </span>
@@ -299,33 +299,33 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5166f042_10'>10</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@a1c4f69_10'>10</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_10'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_10'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; SURVIVED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testPhysicalDamageCalculator()]</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5166f042_11'>11</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@a1c4f69_11'>11</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_11'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_11'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double division with multiplication &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double multiplication with division &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testPhysicalDamageCalculator()]</span></span> replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; KILLED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testPhysicalDamageCalculator()]</span></span> Replaced double division with multiplication &rarr; KILLED</p> <p class='KILLED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testPhysicalDamageCalculator()]</span></span> Replaced double multiplication with division &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5166f042_14'>14</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@a1c4f69_14'>14</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5166f042_14'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@a1c4f69_14'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double division with multiplication &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double multiplication with division &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>4.<span><b>4</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double multiplication with division &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double division with multiplication &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> replaced double return with 0.0d for com/l13gr03/pets/utils/calculator/PhysicalDamageCalculator::execute &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double multiplication with division &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>4.<span><b>4</b><br/><b>Location : </b>execute<br/><b>Killed by : </b>none</span></span> Replaced double multiplication with division &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -350,6 +350,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.utils.calculator.CalculatorTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.calculator.CalculatorTest]/[method:testPhysicalDamageCalculator()] (0 ms)</li><li>com.l13gr03.pets.model.CPU.CPUTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.model.CPU.CPUTest]/[method:testHardCPU()] (3 ms)</li>
 </ul>
 
 <br/>
