--- a/reports/pit/com.l13gr03.pets.utils.random/ThreeRandomizerTest.java.html
+++ b/reports/pit/com.l13gr03.pets.utils.random/ThreeRandomizerTest.java.html
@@ -16,63 +16,63 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4f4c3934_10'>10</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@31887330_10'>10</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4f4c3934_10'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@31887330_10'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>generate3Test<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNotNull &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>generate3Test<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertNotNull &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4f4c3934_18'>18</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@31887330_18'>18</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4f4c3934_18'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@31887330_18'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4f4c3934_19'>19</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@31887330_19'>19</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4f4c3934_19'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@31887330_19'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTenTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4f4c3934_27'>27</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@31887330_27'>27</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4f4c3934_27'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@31887330_27'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4f4c3934_28'>28</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@31887330_28'>28</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4f4c3934_28'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@31887330_28'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFiftyTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4f4c3934_33'>33</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@31887330_33'>33</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4f4c3934_33'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@31887330_33'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decideTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decideTest<br/><b>Killed by : </b>none</span></span> removed call to org/junit/jupiter/api/Assertions::assertFalse &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -97,6 +97,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:oneInTenTest()] (1 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:oneInFiftyTest()] (0 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:generate3Test()] (1 ms)</li><li>com.l13gr03.pets.utils.random.ThreeRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.ThreeRandomizerTest]/[method:decideTest()] (1 ms)</li>
 </ul>
 
 <br/>
