--- a/reports/pit/com.l13gr03.pets.utils.random/TurnRandomizer.java.html
+++ b/reports/pit/com.l13gr03.pets.utils.random/TurnRandomizer.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_4'></a>
 <span>
 </span>
 </span>
@@ -75,12 +75,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_5'></a>
 <span>
 </span>
 </span>
@@ -90,12 +90,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_6'></a>
 <span>
 </span>
 </span>
@@ -104,58 +104,58 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_7'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_7'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    public TurnRandomizer() {</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    public TurnRandomizer() {</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_8'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_8'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        this.random = new Random();</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        this.random = new Random();</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_9'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_9'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_10'></a>
 <span>
 </span>
 </span>
@@ -164,31 +164,31 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_11'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_11'/>
 11
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_11'>2</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_11'>2</a>
 <span>
-1. decide : negated conditional &rarr; NO_COVERAGE<br/>
-2. decide : replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::decide &rarr; NO_COVERAGE<br/>
+1. decide : negated conditional &rarr; SURVIVED<br/>
+2. decide : replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::decide &rarr; SURVIVED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        return (random.nextInt(2) == 0);</span></pre></td></tr>
+<td class='covered'><pre><span  class='survived'>        return (random.nextInt(2) == 0);</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_12'></a>
 <span>
 </span>
 </span>
@@ -198,12 +198,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_13'></a>
 <span>
 </span>
 </span>
@@ -213,12 +213,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_14'></a>
 <span>
 </span>
 </span>
@@ -227,30 +227,30 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_15'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_15'/>
 15
 </td>
-<td class='survived'>
+<td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_15'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_15'>1</a>
 <span>
-1. oneInTen : replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInTen &rarr; NO_COVERAGE<br/>
+1. oneInTen : replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInTen &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        return false;</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>        return false;</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_16'></a>
 <span>
 </span>
 </span>
@@ -260,12 +260,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_17'></a>
 <span>
 </span>
 </span>
@@ -275,12 +275,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_18'></a>
 <span>
 </span>
 </span>
@@ -289,28 +289,28 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_19'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_19'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        return null;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        return null;</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_20'></a>
 <span>
 </span>
 </span>
@@ -320,12 +320,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_21'></a>
 <span>
 </span>
 </span>
@@ -335,12 +335,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_22'/>
 22
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_22'></a>
 <span>
 </span>
 </span>
@@ -349,30 +349,30 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_23'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_23'/>
 23
 </td>
-<td class='survived'>
+<td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_23'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_23'>1</a>
 <span>
-1. oneInFifty : replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInFifty &rarr; NO_COVERAGE<br/>
+1. oneInFifty : replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInFifty &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        return false;</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>        return false;</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_24'></a>
 <span>
 </span>
 </span>
@@ -382,12 +382,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_25'/>
 25
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_25'></a>
 <span>
 </span>
 </span>
@@ -397,12 +397,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@39c437e9_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4250b0c1_26'/>
 26
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_26'></a>
 <span>
 </span>
 </span>
@@ -414,33 +414,33 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@39c437e9_11'>11</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4250b0c1_11'>11</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_11'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_11'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decide<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; NO_COVERAGE</p> <p class='NO_COVERAGE'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>decide<br/><b>Killed by : </b>none</span></span> replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::decide &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>decide<br/><b>Killed by : </b>none</span></span> negated conditional &rarr; SURVIVED</p> <p class='SURVIVED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>decide<br/><b>Killed by : </b>none</span></span> replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::decide &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@39c437e9_15'>15</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4250b0c1_15'>15</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_15'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_15'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTen<br/><b>Killed by : </b>none</span></span> replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInTen &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInTen<br/><b>Killed by : </b>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:oneInTenTest()]</span></span> replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInTen &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@39c437e9_23'>23</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4250b0c1_23'>23</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@39c437e9_23'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4250b0c1_23'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFifty<br/><b>Killed by : </b>none</span></span> replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInFifty &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>oneInFifty<br/><b>Killed by : </b>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:oneInFiftyTest()]</span></span> replaced boolean return with true for com/l13gr03/pets/utils/random/TurnRandomizer::oneInFifty &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -465,6 +465,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:oneInTenTest()] (1 ms)</li><li>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:decideTest()] (0 ms)</li><li>com.l13gr03.pets.utils.random.TurnRandomizerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.utils.random.TurnRandomizerTest]/[method:oneInFiftyTest()] (1 ms)</li>
 </ul>
 
 <br/>
