--- a/reports/pit/com.l13gr03.pets.view/Viewer.java.html
+++ b/reports/pit/com.l13gr03.pets.view/Viewer.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_4'></a>
 <span>
 </span>
 </span>
@@ -75,12 +75,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_5'></a>
 <span>
 </span>
 </span>
@@ -90,12 +90,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_6'></a>
 <span>
 </span>
 </span>
@@ -105,12 +105,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_7'></a>
 <span>
 </span>
 </span>
@@ -120,12 +120,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_8'></a>
 <span>
 </span>
 </span>
@@ -135,12 +135,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_9'></a>
 <span>
 </span>
 </span>
@@ -149,58 +149,58 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_10'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_10'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    public Viewer(T model) {</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    public Viewer(T model) {</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_11'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_11'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        this.model = model;</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>        this.model = model;</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_12'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_12'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_13'></a>
 <span>
 </span>
 </span>
@@ -210,12 +210,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_14'></a>
 <span>
 </span>
 </span>
@@ -224,30 +224,30 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_15'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_15'/>
 15
 </td>
-<td class='survived'>
+<td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_15'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_15'>1</a>
 <span>
-1. getModel : replaced return value with null for com/l13gr03/pets/view/Viewer::getModel &rarr; NO_COVERAGE<br/>
+1. getModel : replaced return value with null for com/l13gr03/pets/view/Viewer::getModel &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        return model;</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>        return model;</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_16'></a>
 <span>
 </span>
 </span>
@@ -257,12 +257,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_17'></a>
 <span>
 </span>
 </span>
@@ -272,12 +272,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_18'></a>
 <span>
 </span>
 </span>
@@ -286,79 +286,79 @@
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_19'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_19'/>
 19
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_19'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_19'>1</a>
 <span>
-1. draw : removed call to com/l13gr03/pets/gui/GUI::clear &rarr; NO_COVERAGE<br/>
+1. draw : removed call to com/l13gr03/pets/gui/GUI::clear &rarr; SURVIVED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        gui.clear();</span></pre></td></tr>
+<td class='covered'><pre><span  class='survived'>        gui.clear();</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_20'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_20'/>
 20
 </td>
-<td class='survived'>
+<td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_20'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_20'>1</a>
 <span>
-1. draw : removed call to com/l13gr03/pets/view/Viewer::drawElements &rarr; NO_COVERAGE<br/>
+1. draw : removed call to com/l13gr03/pets/view/Viewer::drawElements &rarr; KILLED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        drawElements(gui);</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>        drawElements(gui);</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_21'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_21'/>
 21
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_21'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_21'>1</a>
 <span>
-1. draw : removed call to com/l13gr03/pets/gui/GUI::refresh &rarr; NO_COVERAGE<br/>
+1. draw : removed call to com/l13gr03/pets/gui/GUI::refresh &rarr; SURVIVED<br/>
 
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        gui.refresh();</span></pre></td></tr>
+<td class='covered'><pre><span  class='survived'>        gui.refresh();</span></pre></td></tr>
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_22'/>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_22'/>
 22
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_22'></a>
 <span>
 </span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_23'/>
 23
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_23'></a>
 <span>
 </span>
 </span>
@@ -368,12 +368,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_24'></a>
 <span>
 </span>
 </span>
@@ -383,12 +383,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@2c8c897e_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3420547_25'/>
 25
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3420547_25'></a>
 <span>
 </span>
 </span>
@@ -400,43 +400,43 @@
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@2c8c897e_15'>15</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3420547_15'>15</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_15'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3420547_15'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getModel<br/><b>Killed by : </b>none</span></span> replaced return value with null for com/l13gr03/pets/view/Viewer::getModel &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getModel<br/><b>Killed by : </b>com.l13gr03.pets.view.SettingsViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.SettingsViewerTest]/[method:testDrawElements()]</span></span> replaced return value with null for com/l13gr03/pets/view/Viewer::getModel &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@2c8c897e_19'>19</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3420547_19'>19</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_19'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3420547_19'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>draw<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::clear &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>draw<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::clear &rarr; SURVIVED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@2c8c897e_20'>20</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3420547_20'>20</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_20'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3420547_20'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>draw<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/view/Viewer::drawElements &rarr; NO_COVERAGE</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>draw<br/><b>Killed by : </b>com.l13gr03.pets.view.SettingsViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.SettingsViewerTest]/[method:testDrawElements()]</span></span> removed call to com/l13gr03/pets/view/Viewer::drawElements &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@2c8c897e_21'>21</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3420547_21'>21</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@2c8c897e_21'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3420547_21'/> 
 
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>draw<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::refresh &rarr; NO_COVERAGE</p> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>draw<br/><b>Killed by : </b>none</span></span> removed call to com/l13gr03/pets/gui/GUI::refresh &rarr; SURVIVED</p> 
 </td>
 </tr>
 
@@ -461,6 +461,7 @@
 
 <h2>Tests examined</h2>
 <ul>
+<li>com.l13gr03.pets.view.BattleViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.BattleViewerTest]/[method:testDrawElements()] (5 ms)</li><li>com.l13gr03.pets.view.MenuViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.MenuViewerTest]/[method:drawMenu()] (7 ms)</li><li>com.l13gr03.pets.view.SettingsViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.SettingsViewerTest]/[method:testDrawElements()] (4 ms)</li><li>com.l13gr03.pets.view.BattleMulViewerTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.BattleMulViewerTest]/[method:testDrawElements()] (613 ms)</li><li>com.l13gr03.pets.view.GameOverViewTest.[engine:junit-jupiter]/[class:com.l13gr03.pets.view.GameOverViewTest]/[method:testDrawElements()] (114 ms)</li>
 </ul>
 
 <br/>
